--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -42,11 +42,11 @@
 			padding: 0 spacing(medium);
 		}
 
-		@include breakpoint(largemax){
+		@include breakpoint(medmax){
 			padding-right: 100px;
 		}
 
-		@include breakpoint(medmax){
+		@include breakpoint(smallmax){
 			padding-right: 50px;
 		}
 	}
